--- a/7.0/Dockerfile
+++ b/7.0/Dockerfile
@@ -19,12 +19,11 @@ RUN apt-get update && \
     git \
     nano \
     cron && \
-    curl -sL https://deb.nodesource.com/setup_8.x | bash - && \
+    curl -sL https://deb.nodesource.com/setup_9.x | bash - && \
     apt-get install -y nodejs && \
     docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && \
     docker-php-ext-install \
     bcmath \
-    mcrypt \
     pdo_mysql \
     xsl \
     intl \
@@ -40,10 +39,12 @@ RUN apt-get update && \
 # Installing pecl PHP modules
 RUN pecl install \
     xdebug-2.6.0 \
-    imagick-3.4.3 && \
+    imagick-3.4.3
+    mcrypt-1.0.1 && \
     docker-php-ext-enable \
     xdebug \
-    imagick
+    imagick \
+    mcrypt
 
 # Installing extra components
 RUN npm install -g grunt-cli && \
