--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -24,7 +24,7 @@ RUN apt-get update && \
     unzip \
     zip \
     libsodium-dev && \
-    curl -sL https://deb.nodesource.com/setup_10.x | bash - && \
+    curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
     apt-get install -y nodejs && \
     docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && \
     docker-php-ext-install \
@@ -35,6 +35,7 @@ RUN apt-get update && \
     zip \
     soap \
     gd \
+    sockets \
     opcache && \
     apt-get clean -y && \
     apt-get autoclean -y && \
@@ -43,7 +44,7 @@ RUN apt-get update && \
 
 # Installing pecl PHP modules
 RUN pecl install \
-    xdebug-2.7.2 \
+    xdebug-2.9.8 \
     imagick-3.4.3 \
     libsodium && \
     docker-php-ext-enable \
@@ -56,7 +57,5 @@ RUN npm install -g grunt-cli && \
     mkdir -p /var/www/.composer && \
     usermod -u 1000 www-data && \
     groupmod -g 1000 www-data && \
-    adduser www-data sudo && \
-    echo 'www-data ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers && \
     chown -R www-data:www-data /var/www/ && \
     chmod -R g+w /var/www/
