--- a/7.4/Dockerfile
+++ b/7.4/Dockerfile
@@ -1,10 +1,10 @@
-FROM php:7.1-fpm
+FROM php:7.4-fpm
 
 # Updating and installing some dependences
 # TODO remove suggested packages.
 RUN apt-get update && \
     apt-get upgrade -y && \
-    apt-get install -y \
+    apt-get install --no-install-recommends -y \
     libfreetype6-dev \
     libjpeg62-turbo-dev \
     libpng-dev \
@@ -13,26 +13,33 @@ RUN apt-get update && \
     libicu-dev \
     libmemcached-dev \
     zlib1g-dev \
+    libzip-dev \
     libmagickwand-dev \
     libmagickcore-dev \
+    lsof \
     msmtp \
     git \
     nano \
     gnupg \
-    sudo \
-    cron && \
-    curl -sL https://deb.nodesource.com/setup_9.x | bash - && \
+    cron \
+    unzip \
+    zip \
+    sed \
+    tar \
+    mariadb-client \
+    libsodium-dev && \
+    curl -sL https://deb.nodesource.com/setup_12.x | bash - && \
     apt-get install -y nodejs && \
-    docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && \
+    docker-php-ext-configure gd --with-freetype --with-jpeg && \
     docker-php-ext-install \
     bcmath \
-    mcrypt \
     pdo_mysql \
     xsl \
     intl \
     zip \
     soap \
     gd \
+    sockets \
     opcache && \
     apt-get clean -y && \
     apt-get autoclean -y && \
@@ -41,19 +48,18 @@ RUN apt-get update && \
 
 # Installing pecl PHP modules
 RUN pecl install \
-    xdebug-2.6.0 \
-    imagick-3.4.3 && \
+    xdebug-2.9.8 \
+    imagick-3.4.4 \
+    libsodium && \
     docker-php-ext-enable \
     xdebug \
     imagick
-    
+        
 # Installing extra components
 RUN npm install -g grunt-cli && \
     curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer && \
     mkdir -p /var/www/.composer && \
     usermod -u 1000 www-data && \
     groupmod -g 1000 www-data && \
-    adduser www-data sudo && \
-    echo 'www-data ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers && \
     chown -R www-data:www-data /var/www/ && \
     chmod -R g+w /var/www/
