Image generated issues

--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -52,7 +52,7 @@ RUN pecl install \
         
 # Installing extra components
 RUN npm install -g grunt-cli && \
-    curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer && \
+    curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer --version=1.10.17 && \
     mkdir -p /var/www/.composer && \
     usermod -u 1000 www-data && \
     groupmod -g 1000 www-data && \
