--- a/7.4/Dockerfile
+++ b/7.4/Dockerfile
@@ -3,7 +3,7 @@ FROM php:7.4-fpm
 # Updating and installing some dependences
 # TODO remove suggested packages.
 RUN apt-get update && \
-    apt-get install -y \
+    apt-get install --no-install-recommends -y \
     libfreetype6-dev \
     libjpeg62-turbo-dev \
     libpng-dev \
@@ -22,10 +22,11 @@ RUN apt-get update && \
     cron \
     unzip \
     zip \
+    libwebp-dev \
     libsodium-dev && \
     curl -sL https://deb.nodesource.com/setup_14.x | bash - && \
     apt-get install -y nodejs && \
-    docker-php-ext-configure gd --with-freetype --with-jpeg && \
+    docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp && \
     docker-php-ext-install \
     bcmath \
     pdo_mysql \
@@ -45,7 +46,7 @@ RUN apt-get update && \
 
 # Installing pecl PHP modules
 RUN pecl install \
-    xdebug-2.9.8 \
+    xdebug-3.0.3 \
     imagick-3.4.4 \
     libsodium && \
     docker-php-ext-enable \
