Removed PHP 7.2 and updated php 7.4 extensions

--- a/7.4/Dockerfile
+++ b/7.4/Dockerfile
@@ -1,7 +1,6 @@
 FROM php:7.4-fpm
 
 # Updating and installing some dependences
-# TODO remove suggested packages.
 RUN apt-get update && \
     apt-get install --no-install-recommends -y \
     libfreetype6-dev \
@@ -23,22 +22,31 @@ RUN apt-get update && \
     unzip \
     zip \
     libwebp-dev \
+    libcurl4-openssl-dev \
+    libonig-dev \
     libsodium-dev && \
     curl -sL https://deb.nodesource.com/setup_14.x | bash - && \
     apt-get install -y nodejs && \
     docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp && \
     docker-php-ext-install \
     bcmath \
-    pdo_mysql \
-    xsl \
-    intl \
-    zip \
-    soap \
+    # # ctype \
+    # curl \
+    # # dom \
     gd \
+    # # hash \
+    # # iconv \
+    intl \
+    # mbstring \
+    # openssl \
+    pdo_mysql \
+    # simplexml \
+    soap \
+    xsl \
+    zip \
     sockets \
-    opcache \
-    xmlwriter \
-    simplexml && \
+    opcache && \
+    # xmlwriter && \
     apt-get clean -y && \
     apt-get autoclean -y && \
     apt-get autoremove -y && \
@@ -46,16 +54,16 @@ RUN apt-get update && \
 
 # Installing pecl PHP modules
 RUN pecl install \
-    xdebug-3.0.3 \
+    xdebug-3.0.4 \
     imagick-3.4.4 \
-    libsodium && \
+    libsodium-2.0.23 && \
     docker-php-ext-enable \
     xdebug \
     imagick
         
 # Installing extra components
 RUN npm install -g grunt-cli && \
-    curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer --version=1.10.17 && \
+    curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer && \
     mkdir -p /var/www/.composer && \
     usermod -u 1000 www-data && \
     groupmod -g 1000 www-data && \
